--- a/leaderboard.html
+++ b/leaderboard.html
@@ -12,158 +12,108 @@
 
   <style>
     body {
-      background: linear-gradient(135deg, #dfe9f3 0%, #ffffff 100%);
+      background: linear-gradient(135deg, #dfe9f3 0%, #f8f9fa 100%);
       font-family: 'Inter', sans-serif;
     }
 
-    /* Sidebar hover */
-    .sidebar a {
-      transition: all 0.3s ease;
-    }
-    .sidebar a:hover {
-      transform: translateX(5px);
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    }
+    .sidebar a { transition: all 0.3s ease; }
+    .sidebar a:hover { transform: translateX(5px); box-shadow: 0 4px 15px rgba(0,0,0,0.2); }
 
     /* Badges */
-    .silver-badge {
-      background: linear-gradient(145deg, #d7d7d7, #a6a6a6);
-      color: #333;
-      box-shadow: 0 0 10px #c0c0c0;
-    }
-    .gold-badge {
-      background: linear-gradient(145deg, #ffd700, #ffa500);
-      color: white;
-      box-shadow: 0 0 12px #ffc107;
-      animation: glowGold 1.5s infinite alternate;
-    }
-    .platinum-badge {
-      background: linear-gradient(145deg, #e5e5e5, #bdbdbd);
-      color: white;
-      box-shadow: 0 0 12px #ccc;
-      animation: glowPlat 1.5s infinite alternate;
-    }
-    .diamond-badge {
-      background: linear-gradient(145deg, #a3f7ff, #00bcd4);
-      color: white;
-      box-shadow: 0 0 15px #00e5ff;
-      animation: glowDia 1.5s infinite alternate;
-    }
+    .silver-badge { background: linear-gradient(145deg, #d7d7d7, #a6a6a6); color: #333; box-shadow: 0 0 10px #c0c0c0; }
+    .gold-badge { background: linear-gradient(145deg, #ffd700, #ffa500); color: white; box-shadow: 0 0 12px #ffc107; animation: glowGold 1.5s infinite alternate; }
+    .platinum-badge { background: linear-gradient(145deg, #e5e5e5, #bdbdbd); color: white; box-shadow: 0 0 12px #ccc; animation: glowPlat 1.5s infinite alternate; }
+    .diamond-badge { background: linear-gradient(145deg, #a3f7ff, #00bcd4); color: white; box-shadow: 0 0 15px #00e5ff; animation: glowDia 1.5s infinite alternate; }
 
     @keyframes glowGold { from { box-shadow: 0 0 10px rgba(255,215,0,0.5); } to { box-shadow: 0 0 25px rgba(255,215,0,1); } }
     @keyframes glowPlat { from { box-shadow: 0 0 10px rgba(229,228,226,0.5); } to { box-shadow: 0 0 25px rgba(229,228,226,1); } }
     @keyframes glowDia { from { box-shadow: 0 0 10px rgba(185,242,255,0.5); } to { box-shadow: 0 0 25px rgba(185,242,255,1); } }
 
-    /* Table hover effect */
+    /* Leaderboard row hover */
     tbody tr { transition: all 0.3s ease; cursor: pointer; }
-    tbody tr:hover { transform: scale(1.02); background: linear-gradient(to right, #d0f0fd, #f0d6fc); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
-
-    /* Highlight current user */
+    tbody tr:hover { transform: scale(1.03); background: linear-gradient(to right, #d0f0fd, #f0d6fc); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
     tbody tr.bg-blue-50 { background: linear-gradient(to right, #90caf9, #64b5f6); box-shadow: 0 4px 15px rgba(0,0,0,0.2); }
 
-    /* Avatars */
-    .flex-shrink-0 img { border: 2px solid white; transition: transform 0.3s ease, box-shadow 0.3s ease; }
-    .flex-shrink-0 img:hover { transform: scale(1.1); box-shadow: 0 4px 15px rgba(0,0,0,0.3); }
+    header { background: linear-gradient(90deg, #3b82f6, #9333ea); border-radius: 1rem; box-shadow: 0 4px 20px rgba(0,0,0,0.15); }
 
-    /* Header */
-    header { background: linear-gradient(to right, #ffffff, #f0f0f0); border-radius: 1rem; box-shadow: 0 2px 12px rgba(0,0,0,0.08); }
+    .stat-card { transition: all 0.3s ease; }
+    .stat-card:hover { transform: translateY(-5px) scale(1.02); box-shadow: 0 8px 20px rgba(0,0,0,0.15); }
 
-    /* Tier cards */
-    .bg-white.rounded-xl.shadow-md > div { transition: all 0.3s ease; }
-    .bg-white.rounded-xl.shadow-md > div:hover { transform: translateY(-5px) scale(1.02); box-shadow: 0 8px 20px rgba(0,0,0,0.15); }
+    /* Tooltip */
+    .tooltip {
+      position: absolute;
+      background: rgba(55,65,81,0.95);
+      color: #fff;
+      padding: 6px 10px;
+      border-radius: 6px;
+      font-size: 0.75rem;
+      pointer-events: none;
+      opacity: 0;
+      transform: scale(0.8);
+      transition: opacity 0.2s ease, transform 0.2s ease;
+      white-space: nowrap;
+      z-index: 50;
+    }
+    .tooltip.show { opacity: 1; transform: scale(1); }
 
-    /* Select filters */
-    select { transition: all 0.3s ease; }
-    select:hover { background: #e0f7fa; transform: scale(1.05); }
-
-    /* Scrollbar styling */
+    /* Scrollbar */
     ::-webkit-scrollbar { width: 8px; height: 8px; }
     ::-webkit-scrollbar-thumb { background: #888; border-radius: 4px; }
     ::-webkit-scrollbar-thumb:hover { background: #555; }
   </style>
 </head>
-<body class="bg-gray-50">
+<body>
 <div class="flex flex-col md:flex-row min-h-screen">
 
   <!-- Sidebar -->
   <div class="sidebar w-full md:w-64 text-white flex flex-col p-4 bg-gradient-to-b from-blue-800 to-purple-900">
     <h2 class="text-2xl font-bold mb-6">V.I.K.A.S</h2>
     <nav class="flex flex-col space-y-3">
-      <a href="dashboard.html" class="hover:bg-white/20 px-3 py-2 rounded flex items-center space-x-2 transition-all duration-300">
-        <i data-feather="home"></i>
-        <span>Dashboard</span>
-      </a>
-      <a href="leaderboard.html" class="bg-white/20 px-3 py-2 rounded flex items-center space-x-2">
-        <i data-feather="award"></i>
-        <span>Leaderboard</span>
-      </a>
-      <a href="learning.html" class="hover:bg-white/20 px-3 py-2 rounded flex items-center space-x-2 transition-all duration-300">
-        <i data-feather="book"></i>
-        <span>Learning</span>
-      </a>
-      <a href="quiz.html" class="hover:bg-white/20 px-3 py-2 rounded flex items-center space-x-2 transition-all duration-300">
-        <i data-feather="edit"></i>
-        <span>Quizzes</span>
-      </a>
+      <a href="dashboard.html" class="hover:bg-white/20 px-3 py-2 rounded flex items-center space-x-2"><i data-feather="home"></i><span>Dashboard</span></a>
+      <a href="leaderboard.html" class="bg-white/20 px-3 py-2 rounded flex items-center space-x-2"><i data-feather="award"></i><span>Leaderboard</span></a>
+      <a href="learning.html" class="hover:bg-white/20 px-3 py-2 rounded flex items-center space-x-2"><i data-feather="book"></i><span>Learning</span></a>
+      <a href="quiz.html" class="hover:bg-white/20 px-3 py-2 rounded flex items-center space-x-2"><i data-feather="edit"></i><span>Quizzes</span></a>
     </nav>
   </div>
 
   <!-- Main Content -->
-  <div class="flex-1 p-6 overflow-y-auto transition-opacity duration-500 opacity-100">
-    <header class="shadow-sm rounded-xl mb-6 p-4 flex justify-between items-center">
-      <h2 class="text-xl font-semibold text-white">Leaderboard</h2>
-      <button class="p-2 rounded-full bg-white/30 text-white hover:bg-white/50">
-        <i data-feather="message-square"></i>
-      </button>
+  <div class="flex-1 p-6 overflow-y-auto">
+    <header class="mb-6 p-4 flex justify-between items-center text-white">
+      <h2 class="text-xl font-semibold">Leaderboard</h2>
+      <button class="p-2 rounded-full bg-white/30 hover:bg-white/50"><i data-feather="message-square"></i></button>
     </header>
 
+    <!-- Stat Cards -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
+      <div class="stat-card bg-white rounded-xl p-6 shadow-md" data-aos="zoom-in"><h4 class="text-sm font-medium text-gray-500">Total Students</h4><p id="total-students" class="text-2xl font-bold text-gray-800">0</p></div>
+      <div class="stat-card bg-white rounded-xl p-6 shadow-md" data-aos="zoom-in" data-aos-delay="100"><h4 class="text-sm font-medium text-gray-500">Your Rank</h4><p id="your-rank" class="text-2xl font-bold text-gray-800">-</p></div>
+      <div class="stat-card bg-white rounded-xl p-6 shadow-md" data-aos="zoom-in" data-aos-delay="200"><h4 class="text-sm font-medium text-gray-500">Average RP</h4><p id="avg-rp" class="text-2xl font-bold text-gray-800">0</p></div>
+      <div class="stat-card bg-white rounded-xl p-6 shadow-md" data-aos="zoom-in" data-aos-delay="300"><h4 class="text-sm font-medium text-gray-500">Quizzes Completed</h4><p id="quizzes-completed" class="text-2xl font-bold text-gray-800">0</p></div>
+    </div>
+
     <!-- Tier System -->
-    <div class="bg-white rounded-xl shadow-md overflow-hidden mb-8 p-6" data-aos="fade-up">
+    <div class="bg-white rounded-xl shadow-md p-6 mb-8" data-aos="zoom-in">
       <h3 class="text-lg font-semibold text-gray-800 mb-4">Tier System</h3>
       <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <div class="border border-gray-200 rounded-lg p-4 text-center">
-          <div class="mx-auto w-16 h-16 bg-gray-200 rounded-full flex items-center justify-center mb-2">
-            <i data-feather="award" class="text-gray-600"></i>
-          </div>
-          <h4 class="font-medium">Silver Tier</h4>
-          <p class="text-sm text-gray-500">100-499 RP</p>
-        </div>
-        <div class="border border-gray-200 rounded-lg p-4 text-center">
-          <div class="mx-auto w-16 h-16 bg-yellow-100 rounded-full flex items-center justify-center mb-2">
-            <i data-feather="award" class="text-yellow-600"></i>
-          </div>
-          <h4 class="font-medium">Gold Tier</h4>
-          <p class="text-sm text-gray-500">500-999 RP</p>
-        </div>
-        <div class="border border-gray-200 rounded-lg p-4 text-center">
-          <div class="mx-auto w-16 h-16 bg-gray-100 rounded-full flex items-center justify-center mb-2">
-            <i data-feather="award" class="text-gray-400"></i>
-          </div>
-          <h4 class="font-medium">Platinum Tier</h4>
-          <p class="text-sm text-gray-500">1000-1999 RP</p>
-        </div>
-        <div class="border border-gray-200 rounded-lg p-4 text-center">
-          <div class="mx-auto w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mb-2">
-            <i data-feather="award" class="text-blue-400"></i>
-          </div>
-          <h4 class="font-medium">Diamond Tier</h4>
-          <p class="text-sm text-gray-500">2000+ RP</p>
-        </div>
+        <div class="border border-gray-200 rounded-lg p-4 text-center"><div class="mx-auto w-16 h-16 bg-gray-200 rounded-full flex items-center justify-center mb-2"><i data-feather="award" class="text-gray-600"></i></div><h4 class="font-medium">Silver Tier</h4><p class="text-sm text-gray-500">100-499 RP</p></div>
+        <div class="border border-gray-200 rounded-lg p-4 text-center"><div class="mx-auto w-16 h-16 bg-yellow-100 rounded-full flex items-center justify-center mb-2"><i data-feather="award" class="text-yellow-600"></i></div><h4 class="font-medium">Gold Tier</h4><p class="text-sm text-gray-500">500-999 RP</p></div>
+        <div class="border border-gray-200 rounded-lg p-4 text-center"><div class="mx-auto w-16 h-16 bg-gray-100 rounded-full flex items-center justify-center mb-2"><i data-feather="award" class="text-gray-400"></i></div><h4 class="font-medium">Platinum Tier</h4><p class="text-sm text-gray-500">1000-1999 RP</p></div>
+        <div class="border border-gray-200 rounded-lg p-4 text-center"><div class="mx-auto w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mb-2"><i data-feather="award" class="text-blue-400"></i></div><h4 class="font-medium">Diamond Tier</h4><p class="text-sm text-gray-500">2000+ RP</p></div>
       </div>
     </div>
 
     <!-- Leaderboard Table -->
-    <div class="bg-white rounded-xl shadow-md overflow-hidden p-6" data-aos="fade-up">
+    <div class="bg-white rounded-xl shadow-md p-6" data-aos="fade-up">
       <div class="flex items-center justify-between mb-4">
         <h3 class="text-lg font-semibold text-gray-800">Top Students</h3>
         <div class="flex items-center space-x-2">
-          <select id="classFilter" class="appearance-none bg-gray-100 border border-gray-300 text-gray-700 py-2 px-4 pr-8 rounded-lg">
+          <select id="classFilter" class="bg-gray-100 border border-gray-300 text-gray-700 py-2 px-4 pr-8 rounded-lg">
             <option value="all">All Classes</option>
-            <option value="5">Class 5</option>
             <option value="4">Class 4</option>
+            <option value="5">Class 5</option>
             <option value="6">Class 6</option>
           </select>
-          <select id="subjectFilter" class="appearance-none bg-gray-100 border border-gray-300 text-gray-700 py-2 px-4 pr-8 rounded-lg">
+          <select id="subjectFilter" class="bg-gray-100 border border-gray-300 text-gray-700 py-2 px-4 pr-8 rounded-lg">
             <option value="all">All Subjects</option>
             <option value="Math">Mathematics</option>
             <option value="Science">Science</option>
@@ -176,24 +126,24 @@
         <table class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-50">
             <tr>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Rank</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Student</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Class</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tier</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">RP</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Quizzes</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Rank</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Student</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Class</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Tier</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">RP</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Quizzes</th>
             </tr>
           </thead>
           <tbody id="leaderboard-body" class="bg-white divide-y divide-gray-200"></tbody>
         </table>
       </div>
     </div>
-
   </div>
 </div>
 
+<div id="tooltip" class="tooltip"></div>
+
 <script>
-  // SPA smooth page load handled by loadPage() in main script
   function getBadgeClass(tier) {
     switch(tier){
       case "Silver": return "silver-badge px-2 py-1 inline-flex text-xs font-semibold rounded-full";
@@ -211,37 +161,61 @@
     const tbody = document.getElementById("leaderboard-body");
     tbody.innerHTML="";
 
+    let totalRP = 0, quizzesCompleted = 0, yourRank = "-", current = JSON.parse(localStorage.getItem("current-student"));
+
+    const tooltip = document.getElementById("tooltip");
+
     students.forEach((student,index)=>{
-      const isYou = student.username === "You";
+      totalRP += student.rp;
+      quizzesCompleted += student.quizzes;
+      if(current && student.username === current.username){ yourRank = index+1; }
+
       const tr = document.createElement("tr");
+      const isYou = current && student.username === current.username;
       tr.className = isYou ? "bg-blue-50" : "bg-white";
+      tr.setAttribute("data-aos","fade-up");
+      tr.setAttribute("data-aos-delay",index*50);
+
       tr.innerHTML = `
-        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium ${isYou ? 'text-blue-800':'text-gray-900'}">${index+1}</td>
-        <td class="px-6 py-4 whitespace-nowrap">
-          <div class="flex items-center">
-            <div class="flex-shrink-0 h-10 w-10">
-              <img class="h-10 w-10 rounded-full" src="${student.avatar || 'http://static.photos/people/200x200/default'}" alt="">
-            </div>
+        <td class="px-6 py-4 text-sm font-medium ${isYou ? 'text-blue-800':'text-gray-900'}">${index+1}</td>
+        <td class="px-6 py-4">
+          <div class="flex items-center student-info" data-rp="${student.rp}" data-quizzes="${student.quizzes}" data-tier="${student.tier}">
+            <div class="h-10 w-10 flex-shrink-0"><img class="h-10 w-10 rounded-full" src="${student.avatar || 'https://static.photos/people/200x200/default'}" alt=""></div>
             <div class="ml-4">
               <div class="text-sm font-medium ${isYou?'text-blue-800':'text-gray-900'}">${isYou?'You':student.username}</div>
               <div class="text-sm ${isYou?'text-blue-600':'text-gray-500'}">@${student.username.replaceAll(' ','').toLowerCase()}</div>
             </div>
           </div>
         </td>
-        <td class="px-6 py-4 whitespace-nowrap text-sm ${isYou?'text-blue-600':'text-gray-500'}">Class ${student.class}</td>
-        <td class="px-6 py-4 whitespace-nowrap">
-          <span class="${getBadgeClass(student.tier)}">${student.tier}</span>
-        </td>
-        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium ${isYou?'text-blue-800':'text-gray-900'}">${student.rp}</td>
-        <td class="px-6 py-4 whitespace-nowrap text-sm ${isYou?'text-blue-600':'text-gray-500'}">${student.quizzes}</td>
+        <td class="px-6 py-4 text-sm ${isYou?'text-blue-600':'text-gray-500'}">Class ${student.class}</td>
+        <td class="px-6 py-4"><span class="${getBadgeClass(student.tier)}">${student.tier}</span></td>
+        <td class="px-6 py-4 text-sm font-medium ${isYou?'text-blue-800':'text-gray-900'}">${student.rp}</td>
+        <td class="px-6 py-4 text-sm ${isYou?'text-blue-600':'text-gray-500'}">${student.quizzes}</td>
       `;
       tbody.appendChild(tr);
+    });
+
+    document.getElementById("total-students").textContent = students.length;
+    document.getElementById("your-rank").textContent = yourRank;
+    document.getElementById("avg-rp").textContent = students.length ? Math.round(totalRP/students.length) : 0;
+    document.getElementById("quizzes-completed").textContent = quizzesCompleted;
+
+    // Tooltip event
+    document.querySelectorAll('.student-info').forEach(el=>{
+      el.addEventListener('mouseenter', e=>{
+        tooltip.innerHTML = `RP: ${el.dataset.rp} | Quizzes: ${el.dataset.quizzes} | Tier: ${el.dataset.tier}`;
+        const rect = el.getBoundingClientRect();
+        tooltip.style.top = rect.top - 40 + window.scrollY + 'px';
+        tooltip.style.left = rect.left + 'px';
+        tooltip.classList.add('show');
+      });
+      el.addEventListener('mouseleave', ()=>{ tooltip.classList.remove('show'); });
     });
   }
 
   loadLeaderboard();
   feather.replace();
-  AOS.init({ once: true });
+  AOS.init({ once: true, duration: 600, easing: 'ease-out' });
 </script>
 </body>
 </html>
